minor spacing fixes to catalog

--- a/frontend/src/pages/Search.module.css
+++ b/frontend/src/pages/Search.module.css
@@ -44,6 +44,8 @@
 
 .selector_container {
   font-weight: 500;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .light_bg {
